refactor : change tilte name and card heading tag

--- a/Pages/Product List/product-list.html
+++ b/Pages/Product List/product-list.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Listening</title>
+    <title>Product Listing</title>
     <link rel="stylesheet" href="https://eagleui.netlify.app/css/component.css">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="product-list.css">
@@ -109,9 +109,9 @@
                     <img src="https://www.apple.com/v/mac/home/bk/images/overview/compare/compare_mba__fchj615oz0yi_medium_2x.png" alt="i Mac">
                     <span class="product__favourite"><i class="fas fa-heart"></i></span>
                 </div>
-                <div class="product__heading">
+                <h3 class="product__heading">
                     MacBook Pro
-                </div>
+                </h3>
                 <div class="product__price">&#8377; 2000</div>
                 <div class="product__button">
                     <button class="btn btn__primary">Add to Cart</button>
@@ -123,9 +123,9 @@
                     <img src="https://www.apple.com/v/mac/home/bk/images/overview/compare/compare_mba__fchj615oz0yi_medium_2x.png" alt="MacBook Pro">
                     <span class="product__favourite"><i class="far fa-heart"></i></span>
                 </div>
-                <div class="product__heading">
+                <h3 class="product__heading">
                     MacBook Pro
-                </div>
+                </h3>
                 <div class="product__price">&#8377; 2000</div>
                 <div class="product__button">
                     <button class="btn btn__primary">Add to Cart</button>
@@ -137,9 +137,9 @@
                     <img src="https://www.apple.com/v/mac/home/bk/images/overview/compare/compare_mba__fchj615oz0yi_medium_2x.png" alt="MacBook Pro">
                     <span class="product__favourite "><i class="far fa-heart"></i></span>
                 </div>
-                <div class="product__heading">
+                <h3 class="product__heading">
                     MacBook Pro
-                </div>
+                </h3>
                 <div class="product__price">&#8377; 2000</div>
                 <div class="product__button">
                     <button class="btn btn__primary">Add to Cart</button>
@@ -151,9 +151,9 @@
                     <img src="https://www.apple.com/v/mac/home/bk/images/overview/compare/compare_mba__fchj615oz0yi_medium_2x.png" alt="MacBook Pro">
                     <span class="product__favourite"><i class="far fa-heart"></i></span>
                 </div>
-                <div class="product__heading">
+                <h3 class="product__heading">
                     MacBook Pro
-                </div>
+                </h3>
                 <div class="product__price">&#8377; 2000</div>
                 <div class="product__button">
                     <button class="btn btn__primary">Add to Cart</button>
@@ -165,9 +165,9 @@
                     <img src="https://www.apple.com/v/mac/home/bk/images/overview/compare/compare_mba__fchj615oz0yi_medium_2x.png" alt="MacBook Pro">
                     <span class="product__favourite"><i class="far fa-heart"></i></span>
                 </div>
-                <div class="product__heading">
+                <h3 class="product__heading">
                     MacBook Pro
-                </div>
+                </h3>
                 <div class="product__price">2&#8377; 000</div>
                 <div class="product__button">
                     <button class="btn btn__primary">Add to Cart</button>
@@ -179,9 +179,9 @@
                     <img src="https://www.apple.com/v/mac/home/bk/images/overview/compare/compare_mba__fchj615oz0yi_medium_2x.png" alt="MacBook Pro">
                     <span class="product__favourite"><i class="far fa-heart"></i></span>
                 </div>
-                <div class="product__heading">
+                <h3 class="product__heading">
                     MacBook Pro
-                </div>
+                </h3>
                 <div class="product__price">&#8377; 2000</div>
                 <div class="product__button">
                     <button class="btn btn__primary">Add to Cart</button>
@@ -193,9 +193,9 @@
                     <img src="https://www.apple.com/v/mac/home/bk/images/overview/compare/compare_mba__fchj615oz0yi_medium_2x.png" alt="MacBook Pro">
                     <span class="product__favourite"><i class="far fa-heart"></i></span>
                 </div>
-                <div class="product__heading">
+                <h3 class="product__heading">
                     MacBook Pro
-                </div>
+                </h3>
                 <div class="product__price">&#8377; 2000</div>
                 <div class="product__button">
                     <button class="btn btn__primary">Add to Cart</button>
