feat : navbar responsive

--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
     
 <nav class="navigation">
     <div class="navigation__logo">
+      <div class="hamburger">
+        <i class="fas fa-bars"></i>
+      </div>
     <h3 class="navigation__heading">EagleStore</h3>
     </div>
     <ul class="navbar__search">
-    <input class="search__box" type="search" ><span class="search__icon"><i class="fas fa-search"></i></span>
+    <input class="search__box" type="search" placeholder="Search" ><span class="search__icon"><i class="fas fa-search"></i></span>
     </ul>
             
     <ul class="navbar__right">
