feat : hero slider

--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
     </ul>
 </nav>
 <section id="hero">
-  <div class="image-wrappeer">
-    <img class="img-res" src="/images/bgg.jpg" alt="Laptop Background">
-  </div>
+  <div class="center slider"></div>
     <div class="hero__container">
       <div>
       </div>
