refactor : wishlist and product card

--- a/Pages/Product List/product-list.html
+++ b/Pages/Product List/product-list.html
@@ -168,7 +168,7 @@
                 <h3 class="product__heading">
                     MacBook Pro
                 </h3>
-                <div class="product__price">2&#8377; 000</div>
+                <div class="product__price">&#8377; 2000</div>
                 <div class="product__button">
                     <button class="btn btn__primary">Add to Cart</button>
                 </div>
