--- a/Pages/Wishlist/wishlist.html
+++ b/Pages/Wishlist/wishlist.html
@@ -36,10 +36,10 @@
     <main class="wishlist__container">
         <h3 class="heading text__center">My Wishlist</h3>
         <div class="wishlist">
-            <div class="wishlist__card">
-                <div class="wishlist__image">
+            <div class="product__card">
+                <div class="product__image">
                     <img src="https://www.apple.com/v/mac/home/bk/images/overview/compare/compare_mba__fchj615oz0yi_medium_2x.png" alt="i Mac">
-                    <span class="wishlist__favourite"><i class="fas fa-heart"></i></span>
+                    <span class="product__favourite"><i class="fas fa-heart"></i></span>
                 </div>
                 <h3 class="wishlist__heading">
                     MacBook Pro
@@ -49,10 +49,10 @@
                     <button class="btn btn__primary">Move to Cart</button>
                 </div>
             </div>
-            <div class="wishlist__card">
-                <div class="wishlist__image">
+            <div class="product__card">
+                <div class="product__image">
                     <img src="https://www.apple.com/v/mac/home/bk/images/overview/compare/compare_mba__fchj615oz0yi_medium_2x.png" alt="i Mac">
-                    <span class="wishlist__favourite"><i class="fas fa-heart"></i></span>
+                    <span class="product__favourite"><i class="fas fa-heart"></i></span>
                 </div>
                 <h3 class="wishlist__heading">
                     MacBook Pro
@@ -62,10 +62,10 @@
                     <button class="btn btn__primary">Move to Cart</button>
                 </div>
             </div>
-            <div class="wishlist__card">
+            <div class="product__card">
                 <div class="wishlist__image">
                     <img src="https://www.apple.com/v/mac/home/bk/images/overview/compare/compare_mba__fchj615oz0yi_medium_2x.png" alt="i Mac">
-                    <span class="wishlist__favourite"><i class="fas fa-heart"></i></span>
+                    <span class="product__favourite"><i class="fas fa-heart"></i></span>
                 </div>
                 <h3 class="wishlist__heading">
                     MacBook Pro
@@ -75,10 +75,10 @@
                     <button class="btn btn__primary">Move to Cart</button>
                 </div>
             </div>
-            <div class="wishlist__card">
-                <div class="wishlist__image">
+            <div class="product__card">
+                <div class="product__image">
                     <img src="https://www.apple.com/v/mac/home/bk/images/overview/compare/compare_mba__fchj615oz0yi_medium_2x.png" alt="i Mac">
-                    <span class="wishlist__favourite"><i class="fas fa-heart"></i></span>
+                    <span class="product__favourite"><i class="fas fa-heart"></i></span>
                 </div>
                 <h3 class="wishlist__heading">
                     MacBook Pro
