fix : link and button

--- a/Pages/Authentication/signup.html
+++ b/Pages/Authentication/signup.html
@@ -32,8 +32,10 @@
         <ul class="navbar__right">
           <a href="/Pages/Authentication/login.html" class="btn btn__default">Login</a>
           <div class="badge">
-            <i class="badge__icon fas fa-cart-plus"></i>
-            <span class="badge__number">0</span>
+            <a href="/Pages/Cart Page/cart-page.html">
+              <i class="badge__icon fas fa-cart-plus"></i>
+              <span class="badge__number">1</span>
+            </a>
           </div>
           <div class="badge">
             <a href="./Pages/Wishlist/wishlist.html">
