--- a/Pages/Cart Page/cart-page.html
+++ b/Pages/Cart Page/cart-page.html
@@ -34,12 +34,17 @@
     <ul class="navbar__right">
       <button class="btn btn__default">Login</button>
       <div class="badge">
-        <i class="badge__icon fas fa-cart-plus"></i>
-        <span class="badge__number">0</span>
+        <a href="/Pages/Cart Page/cart-page.html">
+          <i class="badge__icon fas fa-cart-plus"></i>
+          <span class="badge__number">1</span>
+        </a>
       </div>
       <div class="badge">
-        <i class="badge__icon far fa-heart"></i>
-        <span class="badge__number">2</span>
+        <a href="/Pages/Wishlist/wishlist.html">
+          <i class="badge__icon far fa-heart"></i>
+          <span class="badge__number">4</span>
+        </a>
+        
       </div>
     </ul>
   </nav>
