--- a/Pages/Product List/product-list.html
+++ b/Pages/Product List/product-list.html
@@ -22,14 +22,18 @@
         </ul>
                 
         <ul class="navbar__right">
-        <button class="btn btn__default">Login</button>
+        <a href="/Pages/Authentication/login.html" class="btn btn__default">Login</a>
         <div class="badge">
-            <i class="badge__icon fas fa-cart-plus"></i>
-            <span class="badge__number">0</span>
+            <a href="/Pages/Cart Page/cart-page.html">
+                <i class="badge__icon fas fa-cart-plus"></i>
+                <span class="badge__number">1</span>
+            </a>
           </div>
           <div class="badge">
-          <i class="badge__icon far fa-heart"></i>
-          <span class="badge__number">2</span>
+            <a href="/Pages/Wishlist/wishlist.html">
+                <i class="badge__icon far fa-heart"></i>
+                <span class="badge__number">4</span>
+            </a>
         </div>
         </ul>
     </nav>
