refactor : product image and cart page

--- a/Pages/Cart Page/cart-page.html
+++ b/Pages/Cart Page/cart-page.html
@@ -32,7 +32,7 @@
     </ul>
 
     <ul class="navbar__right">
-      <button class="btn btn__default">Login</button>
+      <a href="/Pages/Authentication/login.html" class="btn btn__default">Login</a>
       <div class="badge">
         <a href="/Pages/Cart Page/cart-page.html">
           <i class="badge__icon fas fa-cart-plus"></i>
