--- a/Pages/Product List/product-list.html
+++ b/Pages/Product List/product-list.html
@@ -112,13 +112,13 @@
           <div class="product__cards">
               <div class="product__card">
                 <div class="product__image">
-                    <img src="https://www.apple.com/v/mac/home/bk/images/overview/compare/compare_mba__fchj615oz0yi_medium_2x.png" alt="i Mac">
+                    <img src="/images/card-image3.png" alt="i Mac">
                     <span class="product__favourite"><i class="fas fa-heart"></i></span>
                 </div>
                 <h3 class="product__heading">
                     MacBook Pro
                 </h3>
-                <div class="product__price">&#8377; 2000</div>
+                <div class="product__price">&#8377; 129,490.00</div>
                 <div class="product__button">
                     <button class="btn btn__primary">Add to Cart</button>
                 </div>
@@ -126,13 +126,13 @@
 
               <div class="product__card">
                 <div class="product__image">
-                    <img src="https://www.apple.com/v/mac/home/bk/images/overview/compare/compare_mba__fchj615oz0yi_medium_2x.png" alt="MacBook Pro">
+                    <img src="/images/card-image1.avif" alt="Asus ZenBook Duo">
                     <span class="product__favourite"><i class="far fa-heart"></i></span>
                 </div>
                 <h3 class="product__heading">
-                    MacBook Pro
+                    Asus ZenBook Duo
                 </h3>
-                <div class="product__price">&#8377; 2000</div>
+                <div class="product__price">&#8377; 114,990.00</div>
                 <div class="product__button">
                     <button class="btn btn__primary">Add to Cart</button>
                 </div>
@@ -140,13 +140,13 @@
 
               <div class="product__card">
                 <div class="product__image">
-                    <img src="https://www.apple.com/v/mac/home/bk/images/overview/compare/compare_mba__fchj615oz0yi_medium_2x.png" alt="MacBook Pro">
+                    <img src="/images/card-image3.avif" alt="Dell Inspiron">
                     <span class="product__favourite "><i class="far fa-heart"></i></span>
                 </div>
                 <h3 class="product__heading">
-                    MacBook Pro
+                    Dell Inspiron
                 </h3>
-                <div class="product__price">&#8377; 2000</div>
+                <div class="product__price">&#8377; 51,990.00</div>
                 <div class="product__button">
                     <button class="btn btn__primary">Add to Cart</button>
                 </div>
@@ -154,13 +154,13 @@
 
               <div class="product__card">
                 <div class="product__image">
-                    <img src="https://www.apple.com/v/mac/home/bk/images/overview/compare/compare_mba__fchj615oz0yi_medium_2x.png" alt="MacBook Pro">
+                    <img src="/images/card-image2.avif" alt="OnePlus 9R">
                     <span class="product__favourite"><i class="far fa-heart"></i></span>
                 </div>
                 <h3 class="product__heading">
-                    MacBook Pro
+                    OnePlus 9R
                 </h3>
-                <div class="product__price">&#8377; 2000</div>
+                <div class="product__price">&#8377; 39,999.00</div>
                 <div class="product__button">
                     <button class="btn btn__primary">Add to Cart</button>
                 </div>
@@ -168,13 +168,13 @@
 
               <div class="product__card">
                 <div class="product__image">
-                    <img src="https://www.apple.com/v/mac/home/bk/images/overview/compare/compare_mba__fchj615oz0yi_medium_2x.png" alt="MacBook Pro">
+                    <img src="/images/card-image4.avif" alt=" Samsung Galaxy Z Fold3">
                     <span class="product__favourite"><i class="far fa-heart"></i></span>
                 </div>
                 <h3 class="product__heading">
-                    MacBook Pro
+                    Samsung Galaxy Z Fold3
                 </h3>
-                <div class="product__price">&#8377; 2000</div>
+                <div class="product__price">&#8377; 149,999.00</div>
                 <div class="product__button">
                     <button class="btn btn__primary">Add to Cart</button>
                 </div>
@@ -182,13 +182,13 @@
 
               <div class="product__card">
                 <div class="product__image">
-                    <img src="https://www.apple.com/v/mac/home/bk/images/overview/compare/compare_mba__fchj615oz0yi_medium_2x.png" alt="MacBook Pro">
+                    <img src="/images/card-image5.avif" alt="OnePlus Earbuds">
                     <span class="product__favourite"><i class="far fa-heart"></i></span>
                 </div>
                 <h3 class="product__heading">
-                    MacBook Pro
+                    OnePlus Wireless Earbuds
                 </h3>
-                <div class="product__price">&#8377; 2000</div>
+                <div class="product__price">&#8377; 9,990.00</div>
                 <div class="product__button">
                     <button class="btn btn__primary">Add to Cart</button>
                 </div>
@@ -196,13 +196,13 @@
 
               <div class="product__card">
                 <div class="product__image">
-                    <img src="https://www.apple.com/v/mac/home/bk/images/overview/compare/compare_mba__fchj615oz0yi_medium_2x.png" alt="MacBook Pro">
+                    <img src="/images/card-image6.avif" alt="boAt Airdopes">
                     <span class="product__favourite"><i class="far fa-heart"></i></span>
                 </div>
                 <h3 class="product__heading">
-                    MacBook Pro
+                    boAt Airdopes
                 </h3>
-                <div class="product__price">&#8377; 2000</div>
+                <div class="product__price">&#8377; 1,999.00</div>
                 <div class="product__button">
                     <button class="btn btn__primary">Add to Cart</button>
                 </div>
