--- a/Pages/Wishlist/wishlist.html
+++ b/Pages/Wishlist/wishlist.html
@@ -54,39 +54,33 @@
       <div class="wishlist">
         <div class="product__card">
           <div class="product__image">
-            <img
-              src="https://www.apple.com/v/mac/home/bk/images/overview/compare/compare_mba__fchj615oz0yi_medium_2x.png"
-              alt="i Mac"
-            />
+            <img src="/images/card-image1.avif" alt="Asus ZenBook Duo">
             <span class="product__favourite"><i class="fas fa-heart"></i></span>
           </div>
-          <h3 class="wishlist__heading">MacBook Pro</h3>
-          <div class="product__price">&#8377; 2000</div>
+          <h3 class="wishlist__heading">Asus ZenBook Duo</h3>
+          <div class="product__price">&#8377; 114,990.00</div>
           <div class="product__button">
             <button class="btn btn__primary">Move to Cart</button>
           </div>
         </div>
         <div class="product__card">
           <div class="product__image">
-            <img src="/images/Photo3.png" alt="i Mac" />
+            <img src="/images/Photo3.png" alt="Skullcandy" />
             <span class="product__favourite"><i class="fas fa-heart"></i></span>
           </div>
-          <h3 class="wishlist__heading">Earbuds</h3>
+          <h3 class="wishlist__heading">Skullcandy Earbuds</h3>
           <div class="product__price">&#8377; 1000</div>
           <div class="product__button">
             <button class="btn btn__primary">Move to Cart</button>
           </div>
         </div>
         <div class="product__card">
-          <div class="wishlist__image">
-            <img
-              src="https://www.apple.com/v/mac/home/bk/images/overview/compare/compare_mba__fchj615oz0yi_medium_2x.png"
-              alt="i Mac"
-            />
+          <div class="product__image">
+            <img src="/images/card-image2.avif" alt="OnePlus 9R">
             <span class="product__favourite"><i class="fas fa-heart"></i></span>
           </div>
-          <h3 class="wishlist__heading">MacBook Pro</h3>
-          <div class="product__price">&#8377; 2000</div>
+          <h3 class="wishlist__heading">OnePlus 9R</h3>
+          <div class="product__price">&#8377; 39,999.00</div>
           <div class="product__button">
             <button class="btn btn__primary">Move to Cart</button>
           </div>
@@ -94,7 +88,7 @@
         <div class="product__card">
           <div class="product__image">
             <img
-              src="https://www.apple.com/v/mac/home/bk/images/overview/compare/compare_mba__fchj615oz0yi_medium_2x.png"
+              src="/images/card-image3.png"
               alt="i Mac"
             />
             <span class="product__favourite"><i class="fas fa-heart"></i></span>
