--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <a href="https://twitter.com/TheRealAnujK"><i class="icon fab fa-twitter-square"></i></a>
       <a href="https://www.linkedin.com/in/anujkumar-yadav-29b2521aa/"><i class="icon fab fa-linkedin"></i></a>
     </div>
-    <p class="footer__text">© 2022 EagleStore </p>    
+    <p class="footer__text">© EagleStore, 2022 All rights reserved. </p>    
   </footer>
 </body>
 
