--- a/Pages/Authentication/logout.html
+++ b/Pages/Authentication/logout.html
@@ -26,7 +26,7 @@
 
           <div class="logout__buttons">
             <a class="btn btn__default">Login</a>
-            <a class="btn btn--outlined outlined__secondary">Signin</a>
+            <a class="btn btn--outlined outlined__secondary">Signup</a>
           </div>
         </div>
         <div class="logout__images">
