refactor : spelling mistake

--- a/Pages/Authentication/logout.html
+++ b/Pages/Authentication/logout.html
@@ -21,7 +21,7 @@
             You are logges out. To see your account please log in.
           </p>
           <p class="hero__subheading">
-            Don't have an account? Sign in to create one
+            Don't have an account? Signup to create one
           </p>
 
           <div class="logout__buttons">
