feat : logout page

--- a/Pages/Product List/product-list.html
+++ b/Pages/Product List/product-list.html
@@ -22,7 +22,7 @@
         </ul>
                 
         <ul class="navbar__right">
-        <a href="/Pages/Authentication/login.html" class="btn btn__default">Login</a>
+        <a href="/Pages/Authentication/logout.html" class="btn btn__default"><i class="fas fa-sign-out-alt"></i></a>
         <div class="badge">
             <a href="/Pages/Cart Page/cart-page.html">
                 <i class="badge__icon fas fa-cart-plus"></i>
