--- a/Pages/Authentication/logout.html
+++ b/Pages/Authentication/logout.html
@@ -10,9 +10,46 @@
       href="
     https://eagleui.netlify.app/css/component.css"
     />
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="./auth.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
+    integrity="sha512-PgQMlq+nqFLV4ylk1gwUOgm6CtIIXkKwaIHp/PAIWHzig/lKZSEGKEysh0TCVbHJXCLN7WetD8TFecIky75ZfQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
+
+    <nav class="navigation">
+      <div class="navigation__logo">
+        <div class="hamburger">
+          <i class="fas fa-bars"></i>
+        </div>
+        <a href="/index.html">
+          <h3 class="navigation__heading">EagleStore</h3>
+        </a>
+      </div>
+      <ul class="navbar__search">
+        <input class="search__box" type="search" placeholder="Search"><span class="search__icon"><i
+            class="fas fa-search"></i></span>
+      </ul>
+  
+      <ul class="navbar__right">
+        <a href="/Pages/Authentication/login.html" class="btn btn__default">Login</a>
+        <div class="badge">
+          <a href="/Pages/Cart Page/cart-page.html">
+            <i class="badge__icon fas fa-cart-plus"></i>
+            <span class="badge__number">1</span>
+          </a>
+        </div>
+        <div class="badge">
+          <a href="./Pages/Wishlist/wishlist.html">
+          <i class="badge__icon far fa-heart"></i>
+          <span class="badge__number">4</span>
+        </a>
+        </div>
+      </ul>
+    </nav>
+
+
     <main class="logout__container">
       <section class="logout">
         <div class="logout__content">
@@ -20,17 +57,17 @@
           <p class="hero__sub__heading">
             You are logges out. To see your account please log in.
           </p>
-          <p class="hero__subheading">
+          <p class="hero__sub__heading">
             Don't have an account? Signup to create one
           </p>
 
           <div class="logout__buttons">
-            <a class="btn btn__default">Login</a>
-            <a class="btn btn--outlined outlined__secondary">Signup</a>
+            <a href="/Pages/Authentication/login.html" class="btn btn__default">Login</a>
+            <a href="/Pages/Authentication/signup.html" class="btn btn--outlined outlined__secondary">Signup</a>
           </div>
         </div>
         <div class="logout__images">
-          <img src="./bg.png" alt="log out image" />
+          <img src="/images/bg.png" alt="log out image" />
         </div>
       </section>
     </main>
