refactor : fixed navbar and cart value

--- a/Pages/Product List/product-list.html
+++ b/Pages/Product List/product-list.html
@@ -194,7 +194,7 @@
                 </div>
               </div>
 
-              <div class="product__card">
+              <div class="product__card product__card--space">
                 <div class="product__image">
                     <img src="/images/card-image6.avif" alt="boAt Airdopes">
                     <span class="product__favourite"><i class="far fa-heart"></i></span>
