--- a/Pages/Authentication/Profile Page/profile.html
+++ b/Pages/Authentication/Profile Page/profile.html
@@ -22,7 +22,7 @@
         <div class="card__desc profile__list">
           <li class="list__item">My Order</li>
           <li class="list__item">Wishlist</li>
-          <li class="list__item">Notofication</li>
+          <li class="list__item">Notification</li>
           <li class="list__item">Setting</li>
           <a href="../logout.html" class="list__item">LogOut</a>
         </div>
