Refactor : logout Page and Product list

--- a/Pages/Authentication/logout.html
+++ b/Pages/Authentication/logout.html
@@ -35,15 +35,13 @@
       <ul class="navbar__right">
         <a href="/Pages/Authentication/login.html" class="btn btn__default">Login</a>
         <div class="badge">
-          <a href="/Pages/Cart Page/cart-page.html">
+          <a href="/Pages/Authentication/login.html">
             <i class="badge__icon fas fa-cart-plus"></i>
-            <span class="badge__number">1</span>
           </a>
         </div>
         <div class="badge">
-          <a href="./Pages/Wishlist/wishlist.html">
+          <a href="/Pages/Authentication/login.html">
           <i class="badge__icon far fa-heart"></i>
-          <span class="badge__number">4</span>
         </a>
         </div>
       </ul>
