fix : link and login page

--- a/Pages/Profile Page/profile.html
+++ b/Pages/Profile Page/profile.html
@@ -56,7 +56,7 @@
           <a href="../Wishlist/wishlist.html" class="list__item">Wishlist</a>
           <a href="#" class="list__item">Notification</a>
           <a href="#" class="list__item">Setting</a>
-          <a href="../logout.html" class="list__item">LogOut</a>
+          <a href="/Pages/Authentication/logout.html" class="list__item">LogOut</a>
         </div>
       </div>
       <div class="card user-details">
