Feat : Added Footer Every Page

--- a/Pages/Cart Page/cart-page.html
+++ b/Pages/Cart Page/cart-page.html
@@ -93,10 +93,17 @@
         <p class="cart__text">You will save 1999 on this order</p>
         <button class="btn btn__primary">Place order</button>
       </div>
-
     </div>
   </main>
-
+  <footer class="footer">
+    <p class="footer__text">Made with ❤️ by Anujkumar Yadav</p>
+    <div class="footer__icon">
+      <a href="https://github.com/anuj-kumary/Eagle-Store"><i class="icon fab fa-github-square"></i></a>
+      <a href="https://twitter.com/TheRealAnujK"><i class="icon fab fa-twitter-square"></i></a>
+      <a href="https://www.linkedin.com/in/anujkumar-yadav-29b2521aa/"><i class="icon fab fa-linkedin"></i></a>
+    </div>
+    <p class="footer__text">© EagleStore, 2022 All rights reserved. </p>    
+  </footer>
 
 
 
