--- a/Pages/Product List/product-list.html
+++ b/Pages/Product List/product-list.html
@@ -209,13 +209,19 @@
                 <div class="product__button">
                     <button class="btn btn__primary">Add to Cart</button>
                 </div>
-              </div>
-              
+            </div>
           </div>
-   
         </main>
       </div>
-
+      <footer class="footer">
+        <p class="footer__text">Made with ❤️ by Anujkumar Yadav</p>
+        <div class="footer__icon">
+          <a href="https://github.com/anuj-kumary/Eagle-Store"><i class="icon fab fa-github-square"></i></a>
+          <a href="https://twitter.com/TheRealAnujK"><i class="icon fab fa-twitter-square"></i></a>
+          <a href="https://www.linkedin.com/in/anujkumar-yadav-29b2521aa/"><i class="icon fab fa-linkedin"></i></a>
+        </div>
+        <p class="footer__text">© EagleStore, 2022 All rights reserved. </p>    
+      </footer>
 
 </body>
 </html>
