Feat : Add Favicon icon

--- a/Pages/Profile Page/profile.html
+++ b/Pages/Profile Page/profile.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Profile</title>
+    <link rel="icon" type="image/svg+xml" href="/images/dove-solid.png">
     <meta charset="UTF-8" />
     <link
       rel="stylesheet"
@@ -36,7 +37,7 @@
           </a>
         </div>
         <div class="badge">
-          <a href="./Pages/Wishlist/wishlist.html">
+          <a href="/Pages/Wishlist/wishlist.html">
           <i class="badge__icon far fa-heart"></i>
           <span class="badge__number">4</span>
         </a>
