--- a/Pages/Cart Page/cart-page.html
+++ b/Pages/Cart Page/cart-page.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cart Page</title>
+  <link rel="icon" type="image/svg+xml" href="/images/dove-solid.png">
   <link rel="stylesheet" href="
     https://eagleui.netlify.app/css/component.css">
   <link rel="stylesheet" href="/style.css">
