feat : Added checkout and address management link

--- a/Pages/Cart Page/cart-page.html
+++ b/Pages/Cart Page/cart-page.html
@@ -78,21 +78,17 @@
             <button class="btn btn__secondary">Remove From Cart</button>
           </div>
         </div>
+        
       </div>
 
       <div class="cart__vertical">
         <h3 class="cart_heading">Price details</h3>
         <hr>
         <div class="cart__price--distribution">
-        <p>Price (2 items) <span class="cart__price--value">&#8377; 230,900.00</span></p>
-        <p>Discount <span class="cart__price--value">&#8377; -1999</span></p>
-        <p>Delivery Charges <span class="cart__price--value">&#8377; 200.00</span> </p>
-        </div>
+        <p>MacBook Pro <span class="cart__price--value">&#8377; 115,450.00</span></p>
+        <p>MacBook Pro <span class="cart__price--value">&#8377; 115,450.00</span></p>
         <hr>
-        <h3 class="cart__total">Total amount <span class="cart__price--value">&#8377; 229,101.00</span></h3>
-        <hr>
-        <p class="cart__text">You will save 1999 on this order</p>
-        <button class="btn btn__primary">Place order</button>
+        <a href="/Pages/Checkout/checkout.html" class="btn btn__primary">Proceed To Check Out</a>
       </div>
     </div>
   </main>
