--- a/Pages/Profile Page/profile.html
+++ b/Pages/Profile Page/profile.html
@@ -55,7 +55,7 @@
         <div class="card__desc profile__list">
           <a href="#" class="list__item">My Order</a>
           <a href="../Wishlist/wishlist.html" class="list__item">Wishlist</a>
-          <a href="#" class="list__item">Notification</a>
+          <a href="../Address Management/address.html" class="list__item">Address Management</a>
           <a href="#" class="list__item">Setting</a>
           <a href="/Pages/Authentication/logout.html" class="list__item">LogOut</a>
         </div>
