--- a/Pages/Profile Page/profile.html
+++ b/Pages/Profile Page/profile.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Profile</title>
-    <link rel="icon" type="image/svg+xml" href="/images/dove-solid.png">
-    <meta charset="UTF-8" />
-    <link
-      rel="stylesheet"
-      href="https://eagleui.netlify.app/css/component.css"
-    />
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="./profile.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" integrity="sha512-PgQMlq+nqFLV4ylk1gwUOgm6CtIIXkKwaIHp/PAIWHzig/lKZSEGKEysh0TCVbHJXCLN7WetD8TFecIky75ZfQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Eagle Store</title>
+  <link rel="icon" type="image/svg+xml" href="./images/dove-solid.png">
+  <link rel="stylesheet" href="
+    https://eagleui.netlify.app/css/component.css">
+  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="./profile.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
+    integrity="sha512-PgQMlq+nqFLV4ylk1gwUOgm6CtIIXkKwaIHp/PAIWHzig/lKZSEGKEysh0TCVbHJXCLN7WetD8TFecIky75ZfQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
 
   <body>
